--- a/experience/submission/etd.html
+++ b/experience/submission/etd.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/global.css" />
-    <link
-      rel="stylesheet"
-      href="../assets/css/pages.css"
-    />
-    <title>Submit your experience - Participation - Airbnb</title>
+    <link rel="stylesheet" href="../../assets/css/global.css" />
+    <link rel="stylesheet" href="../../assets/css/pages.css" />
+    <title>Submit your experience - Easy to do - Airbnb</title>
   </head>
   <body class="with-new-header">
     <div id="site-skip-links">
@@ -75,11 +72,7 @@
                                 ></path></svg></span
                           ></a>
                           <div class="app-theme__save-btn-wrapper">
-                            <button
-                              type="button"
-                              class="app-theme__save-btn"
-                              onclick="window.location.href='../experiences.html';"
-                            >
+                            <button type="button" class="app-theme__save-btn" onclick="window.location.href='../experiences.html';">
                               Save and exit
                             </button>
                           </div>
@@ -342,8 +335,9 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="expectations-2"
+                                        onclick="window.location.href='participation.html';"
                                       >
-                                        <div class="app-theme__sidebar-expandable-wrapper">
+                                        <div class="app-theme__sidebar-expandable-text-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">
                                             Participation
                                           </div>
@@ -374,9 +368,8 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="expectations-3"
-                                        onclick="window.location.href='etd.html';"
                                       >
-                                        <div class="app-theme__sidebar-expandable-text-wrapper">
+                                        <div class="app-theme__sidebar-expandable-wrapper">
                                           <div class="app-theme__sidebar-expandable-text">Easy to do</div>
                                           <div class="app-theme__sidebar-expandable-icon-wrapper">
                                             <svg
@@ -521,6 +514,7 @@
                                         type="button"
                                         class="app-theme__sidebar-expandable-button"
                                         data-veloute="about-you"
+
                                         onclick="window.location.href='about.html';"
                                       >
                                         <div class="app-theme__sidebar-expandable-text-wrapper">
@@ -1013,17 +1007,17 @@
                         <button id="side-nav-toggle" aria-expanded="true" type="button" class="header__logo-btn">
                           <span>
                             <svg viewBox="0 0 16 16" role="img" aria-hidden="false" aria-label="Toggle step navigation" focusable="false" style="
-                              height: 14px;
-                              width: 14px;
-                              display: block;
-                              fill: currentcolor;
+                                height: 14px;
+                                width: 14px;
+                                display: block;
+                                fill: currentcolor;
                               ">
                               <path d="m15.25 12.5a.75.75 0 01-.75.75h-13a .75.75 0 010-1.5h13a .75.75 0 01 .75.75zm-.75-5.75h-13a .75.75 0 100 1.5h13a .75.75 0 000-1.5zm-13-3.5h13a .75.75 0 000-1.5h-13a .75.75 0 100 1.5z" fill-rule="evenodd"></path>
                             </svg>
                           </span>
                         </button>
                       </div>
-                      <div class="header__logo-btn-text">Participation</div>
+                      <div class="header__logo-btn-text">Easy to do</div>
                     </div>
                     <section class="site-content__page-content">
                       <div class="vh-100">
@@ -1039,7 +1033,7 @@
                                       class="heading"
                                       elementtiming="LCP-target"
                                     >
-                                      Participation
+                                      Easy to do
                                     </h1>
                                   </div>
                                 </div>
@@ -1049,7 +1043,7 @@
                               class="lite-image"
                               style="
                                 border-radius: 12px;
-                                background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAADCAIAAADUVFKvAAAAOUlEQVQIHWM0MTLxdLbj4Rb88PP7qaMHGR0cTB3NLf59YTS2szpx5iSjhak6OxuPtLTYp2cfOIWEAaeBEQ9wFsZjAAAAAElFTkSuQmCC');
+                                background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAADCAIAAADUVFKvAAAAO0lEQVQIHQEwAM//AaRxUzE0HAIACMe7xcPV7wHZpGr8Bw/w7vf54fvy+PkBxpxuAP789PX+3eL20b+/ZXMeAKXl/CoAAAAASUVORK5CYII=');
                                 background-size: contain;
                                 --dls-liteimage-padding-top: 66.6667%;
                               "
@@ -1060,8 +1054,8 @@
                                   aria-hidden="true"
                                   alt=""
                                   elementtiming="LCP-target"
-                                  src="https://a0.muscache.com/pictures/76e8cb54-4a6a-4a94-8c0e-ef4d21024c8b.jpg"
-                                  data-original-uri="https://a0.muscache.com/pictures/76e8cb54-4a6a-4a94-8c0e-ef4d21024c8b.jpg"
+                                  src="https://a0.muscache.com/pictures/c3be8348-1114-40e2-9bd8-70208a07867d.jpg"
+                                  data-original-uri="https://a0.muscache.com/pictures/c3be8348-1114-40e2-9bd8-70208a07867d.jpg"
                                   style="
                                     object-fit: contain;
                                     border-radius: 12px;
@@ -1070,7 +1064,7 @@
                                 <div
                                   class="lite-image__fallback"
                                   style="
-                                    background-image: url('https://a0.muscache.com/pictures/76e8cb54-4a6a-4a94-8c0e-ef4d21024c8b.jpg');
+                                    background-image: url('https://a0.muscache.com/pictures/c3be8348-1114-40e2-9bd8-70208a07867d.jpg');
                                     background-size: contain;
                                     border-radius: 12px;
                                   "
@@ -1080,29 +1074,77 @@
                             <div class="site-content__content-wrapper-rules">
                               <div class="inline">
                                 <p class="site-content__content-wrapper-rules-note">
-                                  We’re looking for engaging activities that are
-                                  designed for “doing” and not just “watching.”
+                                  We’re looking for experiences that don’t
+                                  require difficult preparation or special
+                                  materials, and can be enjoyed by the whole
+                                  family.
                                 </p>
                                 For example:
                                 <ul class="site-content__content-wrapper-rules-ol">
                                   <li>
-                                    Follow-along projects that guests can make
-                                    at home
+                                    A cooking class using simple ingredients
                                   </li>
                                   <li>
-                                    Performances that include interaction with
-                                    the audience
+                                    A craft activity using household materials
                                   </li>
                                   <li>
-                                    Questions, games, and interesting
-                                    conversation
+                                    A concert you can enjoy from the couch
                                   </li>
                                 </ul>
                                 <p class="site-content__content-wrapper-rules-note">
-                                  Guests should feel immersed in the experience
-                                  the entire time, like they’re an active part
-                                  of it.
+                                  Guests should be able to show up, sign on, and
+                                  have fun from wherever they are.
                                 </p>
+                              </div>
+                            </div>
+                            <div class="site-content__content-wrapper-rules-radio-grp">
+                              <div class="">
+                                <div class="margin__y-24">
+                                  <fieldset class="site-content__content-fieldset" role="radiogroup">
+                                    <legend class="site-content__content-menu-legend">
+                                      <div class="inline">
+                                        Are you able to share stories or educate
+                                        guests about the animals in your
+                                        experience?
+                                      </div>
+                                    </legend>
+                                    <div class="place__recommended-no">
+                                      <label
+                                        for="info_score_educate_about_animals-Yes"
+                                        class="flex"
+                                        ><input
+                                          id="info_score_educate_about_animals-Yes"
+                                          name="info_score_educate_about_animals"
+                                          class="site-content__content-wrapper-rules-radio-yes"
+                                          aria-invalid="false"
+                                          type="radio"
+                                          data-veloute="info_score_educate_about_animals-0"
+                                          value="0"
+                                          checked=""
+                                        /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
+                                          ><div class="payment-payout__notice-desc">Yes</div></span
+                                        ></label
+                                      >
+                                    </div>
+                                    <div class="place__recommended-no">
+                                      <label
+                                        for="info_score_educate_about_animals-No"
+                                        class="flex"
+                                        ><input
+                                          id="info_score_educate_about_animals-No"
+                                          name="info_score_educate_about_animals"
+                                          class="site-content__content-wrapper-rules-radio-no"
+                                          aria-invalid="false"
+                                          type="radio"
+                                          data-veloute="info_score_educate_about_animals-1"
+                                          value="1"
+                                        /><span class="site-content__content-wrapper-rules-radio-text-wrapper"
+                                          ><div class="payment-payout__notice-desc">No</div></span
+                                        ></label
+                                      >
+                                    </div>
+                                  </fieldset>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -1171,7 +1213,6 @@
 
     <div id="fb-root"></div>
     <div id="authModals"></div>
-    <div>
       <iframe style="display: none"></iframe>
     </div>
   </body>
