--- a/account/invite-friends.html
+++ b/account/invite-friends.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>Airbnb Coupon Codes: Invite Your Friends</title>
   </head>
   <body class="with-new-header">
@@ -900,6 +900,6 @@
     </div>
     <!-- /Show more details modal -->
 
-    <script src="assets/js/pages/invite-friends.js" defer></script>
+    <script src="../assets/js/pages/invite-friends.js" defer></script>
   </body>
 </html>
