--- a/account/personal-info.html
+++ b/account/personal-info.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>Personal Information - Account Settings - Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -8447,7 +8447,7 @@
     </div>
     <!-- /Goverment ID remove modal -->
 
-    <script src="assets/js/components.js" defer></script>
-    <script src="assets/js/pages/personal-info.js" defer></script>
+    <script src="../assets/js/components.js" defer></script>
+    <script src="../assets/js/pages/personal-info.js" defer></script>
   </body>
 </html>
