--- a/account/profile.html
+++ b/account/profile.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>Jose Angelo's Profile - Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -3310,7 +3310,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
     </div>
     <!-- /Learn more modal -->
 
-    <script src="assets/js/components.js" defer></script>
-    <script src="assets/js/pages/profile.js" defer></script>
+    <script src="../assets/js/components.js" defer></script>
+    <script src="../assets/js/pages/profile.js" defer></script>
   </body>
 </html>
