--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>Log In / Sign Up</title>
   </head>
 
@@ -7286,6 +7286,6 @@
       </div>
     </div>
 
-    <script src="assets/js/pages/signup_login.js" defer></script>
+    <script src="../assets/js/pages/signup_login.js" defer></script>
   </body>
 </html>
