--- a/account/welcome_back.html
+++ b/account/welcome_back.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <link rel="stylesheet" href="assets/css/global.css" />
-  <link rel="stylesheet" href="assets/css/pages.css" />
+  <link rel="stylesheet" href="../assets/css/global.css" />
+  <link rel="stylesheet" href="../assets/css/pages.css" />
   <title>Log In / Sign Up</title>
 </head>
 
@@ -396,7 +396,7 @@
       </div>
     </div>
 
-  <script src="assets/js/pages/signup_login.js" defer></script>
+  <script src="../assets/js/pages/signup_login.js" defer></script>
 </body>
 
 </html>
