move lps-resources pages
update lps-resources css paths

--- a/lps-resources/help.html
+++ b/lps-resources/help.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>Home - Airbnb Help Center</title>
   </head>
   <body class="with-new-header">
@@ -6153,7 +6153,7 @@
       </div>
     </div>
 
-    <script src="assets/js/components.js" defer></script>
-    <script src="assets/js/pages/help.js" defer></script>
+    <script src="../assets/js/components.js" defer></script>
+    <script src="../assets/js/pages/help.js" defer></script>
   </body>
 </html>
