--- a/messaging/notifications.html
+++ b/messaging/notifications.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>Messages • Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -1552,6 +1552,6 @@
       </div>
     </div>
 
-    <script src="assets/js/pages/notifications.js" defer></script>
+    <script src="../assets/js/pages/notifications.js" defer></script>
   </body>
 </html>
