--- a/reviews/profile-reviews.html
+++ b/reviews/profile-reviews.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>Reviews</title>
   </head>
   <body class="with-new-header has-epcot-header">
@@ -780,6 +780,6 @@
       </div>
     </div>
 
-    <script src="assets/js/pages/profile-reviews.js" defer></script>
+    <script src="../assets/js/pages/profile-reviews.js" defer></script>
   </body>
 </html>
