--- a/reviews/reviews.html
+++ b/reviews/reviews.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/global.css" />
-    <link rel="stylesheet" href="assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
+    <link rel="stylesheet" href="../assets/css/pages.css" />
     <title>Write a public review for Jose Angelo - Airbnb</title>
   </head>
   <body class="with-new-header">
@@ -1408,6 +1408,6 @@
         </div>
       </div>
     </div>
-    <script src="assets/js/pages/reviews.js" defer></script>
+    <script src="../assets/js/pages/reviews.js" defer></script>
   </body>
 </html>
